<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#97A5EAFF"
    tools:context=".UserSignup">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/apps_head"
        app:srcCompat="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/employee_signup"
            android:text="@string/employee_registration"
            android:textColor="#044A81"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/enter_your_company_details"
            android:textColor="#616161"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/companei"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/company"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spincompany"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textAlignment="center"
                android:background="#fff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/password"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:paddingRight="4dp"
                android:text="@string/passworded"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/companypassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:background="#fff"
                android:hint="@string/company_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:text="@string/enter_your_informations"
            android:textColor="#616161"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/ranked"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/rank"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rank"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="#fff"
                android:hint="@string/employee_position"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/named"
                android:gravity="center"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="#fff"
                android:hint="@string/employee_full_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/userid"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/user_id"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userid"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="null"
                android:background="#fff"
                android:hint="@string/employee_id_service_number"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/phone"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="15dp"
                android:text="@string/phoned"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="phone"
                android:background="#fff"
                android:hint="@string/_01xxxxxxxxx"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="16sp"
                tools:ignore="TextFields" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/signupbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_employee"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>