<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#97A5EAFF"
    tools:context=".UserProfile">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/header"
        android:contentDescription="@string/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_registration"
            android:textColor="#044A81"
            android:textSize="23sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_company_information"
            android:layout_marginBottom="3dp"
            android:textColor="#777777"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/company"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/companyname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#fff"
                android:hint="@string/company_name"
                android:textColor="#000"
                android:textSize="16sp"
                android:padding="10dp"
                android:inputType="text"
                android:autofillHints="name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/admin_npassworded"
                android:textSize="16sp"
                android:paddingLeft="3dp"
                android:paddingRight="4dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/adminpassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#fff"
                android:hint="@string/admin_password"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="16sp"
                android:padding="10dp"
                android:autofillHints="password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/company_npassword"
                android:textSize="16sp"
                android:paddingLeft="3dp"
                android:paddingRight="2dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/companypassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#fff"
                android:hint="@string/company_password"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="16sp"
                android:padding="10dp"
                android:autofillHints="password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="16sp"
                android:paddingLeft="19dp"
                android:paddingRight="19dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#fff"
                android:textColor="#000"
                android:textSize="16sp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:autofillHints="emailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/wifi_ip_naddressed"
                android:textSize="16sp"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wifi"
                android:layout_width="190dp"
                android:layout_height="48dp"
                android:background="#1B000000"
                android:hint="@string/refresh_your_wifi"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#676464"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/refresh"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/refresh"
                android:backgroundTint="@color/colour_change"
                android:contentDescription="@string/refresh" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/adminregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/register" />

        </LinearLayout>

    </LinearLayout></ScrollView>

</LinearLayout>