<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDemo">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/tick"
            android:contentDescription="@string/tick" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/successfully_attended"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_attendance_has_been_updated_and_sent_to_your_administrator"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/timein"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_background_success"
            android:text="@string/time_inn" />

        <Button
            android:id="@+id/timeout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_background_success"
            android:text="@string/time_outt" />


    </LinearLayout>

</LinearLayout>